--- a/sidebar.html
+++ b/sidebar.html
@@ -1,3 +1,8 @@
 <span class="sideBarTitle">Basic Function</span>
 <a href="#callBackend" class="sideBarItem">Call Backend</a>
 <a href="#tableFunction" class="sideBarItem">Table Function</a>
+<a href="#loginSession" class="sideBarItem">Set Session after Login</a>
+<a href="#doSpaces" class="sideBarItem">Digital Ocean</a>
+<a href="#socket" class="sideBarItem">Socket Function</a>
+<span class="sideBarTitle">General Function</span>
+<a href="#numberThousand" class="sideBarItem">Number Thousand</a>
