--- a/sidebar.html
+++ b/sidebar.html
@@ -6,3 +6,5 @@
 <a href="#socket" class="sideBarItem">Socket Function</a>
 <span class="sideBarTitle">General Function</span>
 <a href="#numberThousand" class="sideBarItem">Number Thousand</a>
+<a href="#arrayFunction" class="sideBarItem">Array Function</a>
+<a href="#numericInp" class="sideBarItem">Apply Numeric Input</a>
