--- a/sidebar.html
+++ b/sidebar.html
@@ -1,3 +1,4 @@
+<a href="debug.html" class="sideBarItem">Debug Flow</a>
 <span class="sideBarTitle">Basic Function</span>
 <a href="#callBackend" class="sideBarItem">Call Backend</a>
 <a href="#tableFunction" class="sideBarItem">Table Function</a>
