--- a/debug.html
+++ b/debug.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="sectionDisplay" id="cssErr1">
+            <div class="sectionDisplay nextContent" id="cssErr1">
                 <h4>CSS Image Stretch</h4>
                 <p>You may: </p>
                 <ul>
