--- a/sidebar.html
+++ b/sidebar.html
@@ -5,6 +5,7 @@
 <a href="#loginSession" class="sideBarItem">Set Session after Login</a>
 <a href="#doSpaces" class="sideBarItem">Digital Ocean</a>
 <a href="#socket" class="sideBarItem">Socket Function</a>
+<a href="#json" class="sideBarItem">JSON Function</a>
 <span class="sideBarTitle">General Function</span>
 <a href="#numberThousand" class="sideBarItem">Number Thousand</a>
 <a href="#arrayFunction" class="sideBarItem">Array Function</a>
