--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
                 <p class="mt-2">Function</p>
                 <div class="codeBlock">
-                    <code>var object = [];</code><br><code>$.each(<span contenteditable="true">$(".inp")</span>, function(k,v){</code><code>  // Your Code here</code><code>  var value = $(v).val();</code><code>  object.push(value);</code><code>});</code>
+                    <code>var object = [];</code><br><code>$.each(<span contenteditable="true">$(".inp")</span>, function(k,v){</code><code>  var value = $(v).val();</code><code>  object.push(value);</code><code>});</code>
                 </div>
             </div>
           </div>
